adjusting fade-ins for slider gallery, autoplay vid & text-dyptich

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         <!— Windows 8.1 + IE11 and above —>
         <meta name="msapplication-config" content="/browserconfig.xml" />
         <title>R.Neil</title>
+        <meta name="description" content="Portfolio of bonsai professional and artist, Ryan Neil, based in St.Helens, Oregon." />
         <base href="/">
     </head>
     <body>
