added viewport-fit=cover to html

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <!-- generics -->
         <link rel="icon" href="assets/favicon-32.png" sizes="32x32">
         <link rel="icon" href="assets/favicon-96.png" sizes="96x96">
